# Hyper-Match-Engine

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
clients/python/: README.md  pyproject.toml
clients/python/examples/: quickstart.py
clients/python/hme_client/: __init__.py  client.py  errors.py  stream.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/examples/: quickstart.mjs
clients/typescript/src/: client.ts  errors.ts  index.ts  stream.ts  types.ts
codec/: Cargo.toml
codec/src/: lib.rs
codec/tests/: cross_impl_byte_compat.rs  prop_decode_encode_round_trip.rs  prop_encode_decode_round_trip.rs  prop_fixed_layout.rs  prop_reject_malformed.rs
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt
cpp/bench/include/hme/: benchmark.hpp  latency_stats.hpp
cpp/codec/: CMakeLists.txt
cpp/codec/include/hme/: binary_message.hpp  codec.hpp  wire_protocol.hpp
cpp/codec/src/: codec.cpp
cpp/engine/: CMakeLists.txt
cpp/engine/include/hme/: alloc_counter.hpp  engine.hpp  engine_processor.hpp  integrity_guard.hpp  matching_engine.hpp  order_book.hpp  ring_buffer.hpp
cpp/engine/src/: alloc_counter.cpp  engine.cpp
cpp/network/: CMakeLists.txt
cpp/network/include/hme/: connection_registry.hpp  frame_buffer.hpp  network.hpp  tcp_server.hpp
cpp/network/src/: network.cpp  tcp_server.cpp
cpp/server/: CMakeLists.txt
cpp/server/include/hme/: server_pipeline.hpp
cpp/server/src/: main.cpp
cpp/tests/: CMakeLists.txt  alloc_counter_test.cpp  benchmark_reporting_test.cpp  binary_message_test.cpp  codec_test.cpp  connection_lifecycle_integration_test.cpp  connection_registry_test.cpp  cross_impl_byte_compat_test.cpp  end_to_end_integration_test.cpp  engine_processor_test.cpp  engine_startup_failure_test.cpp  engine_startup_test.cpp  frame_buffer_test.cpp  integrity_guard_fault_injection_test.cpp  integrity_guard_test.cpp  latency_stats_test.cpp  matching_engine_cancel_test.cpp  matching_engine_test.cpp  matching_engine_validation_test.cpp  order_book_test.cpp  prop_benchmark_failed_order_test.cpp  prop_cancel_non_resting_test.cpp  prop_cancel_removes_resting_test.cpp  prop_codec_byte_round_trip_test.cpp  prop_codec_reject_malformed_test.cpp  prop_codec_round_trip_test.cpp  prop_continue_after_invalid_test.cpp  prop_deterministic_output_test.cpp  prop_fifo_processing_order_test.cpp  prop_invalid_order_preserves_book_test.cpp  prop_latency_stat_invariants_test.cpp  prop_network_framing_round_trip_test.cpp  prop_oversize_frame_rejection_test.cpp  prop_positive_quantity_invariant_test.cpp  prop_price_ordering_invariant_test.cpp  prop_price_time_priority_test.cpp  prop_quantity_conservation_test.cpp  prop_ring_buffer_backpressure_test.cpp  prop_terminal_condition_test.cpp  prop_trade_pricing_test.cpp  (+4 more)
docker/: engine.Dockerfile  gateway.Dockerfile
docs/: DESIGN.md  REQUIREMENTS.md
gateway/: Cargo.toml
gateway-server/: Cargo.toml
gateway-server/src/: api.rs  book.rs  engine_client.rs  journal.rs  main.rs  state.rs  stats.rs
gateway/src/: lib.rs
gateway/tests/: end_to_end.rs  engine_timeout.rs  prop_duplicate_id_rejection.rs  prop_malformed_request_rejection.rs  prop_valid_order_normalization.rs  response_conversion_latency.rs
scripts/: run.ps1  run.sh
web/: app.js  index.html  styles.css
