[package]
name = "gateway-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hme-gateway"
path = "src/main.rs"

[dependencies]
codec = { path = "../codec" }
gateway = { path = "../gateway" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
