[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hme-client"
version = "0.1.0"
description = "Python client SDK for the Hyper-Match-Engine gateway HTTP + WebSocket API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hyper-Match-Engine" }]
keywords = ["hft", "matching-engine", "trading", "client", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
stream = ["websocket-client>=1.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hme_client*"]
